--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -1,10 +1,15 @@
 @white: #FFFFFF;
-@special_grey:#CDCDCD;
-@basic_green:#68B738;
-@basic_grey:#F2F2F2;
-@special_grey-2:#EBEBEB;
-@special_dark-grey:#444444;
+@black: #111111;
+@special_grey: #CDCDCD;
+@basic_green: #68B738;
+@basic_grey: #F2F2F2;
+@special_grey-2: #EBEBEB;
+@special_dark-grey: #444444;
 @basic_green-2: #5EAA2F;
 @special_dark-grey-2: #222222;
 @status_error: #FF8282;
 @special_grey-2: #666666;
+@light-grey-underline: #D9D9D9;
+@label-light-grey: #C4C4C4;
+@transparent_light-grey:#DCDCDC;
+
