--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,14 +1,16 @@
 @import (reference) "global/variables.less";
+@import "./fonts.less";
 @import (less) "global/global.less";
 @import (less) "blocks/utils/normalize.css";
 @import (less) "blocks/utils/wrappers.less";
 
-// Viewports
 
+// Viewports
+@mobile-width: 320px;
 @tablet-width: 768px;
-@laptop-width:1068px;
-@desctop-width: 1280px;
-@desctop-width-only: 1279px;
+@laptop-width: 1068px;
+@desktop-width: 1280px;
+@desktop-width-only: 1279px;
 @mobile-width-only: 767px;
 
 @import (less) "blocks/page.less";
@@ -22,18 +24,3 @@
 @import (less) "blocks/example.less";
 @import (less) "blocks/footer.less";
 // @import (less) "blocks/";
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
