--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -2,43 +2,39 @@
   position: relative;
 
 
-  &__wrapper {
-
-
-
-  }
+  &__wrapper {}
 
   &__location {
     height: 362px;
     background: grey;
-    @media(min-width: @tablet-width){
+
+    @media(min-width: @tablet-width) {
       height: 400px;
     }
   }
 
   &__copyright {
 
-    min-height:78px;
+    min-height: 78px;
     display: flex;
     justify-content: space-between;
     align-content: center;
-    @media(min-width: @tablet-width){
+
+    @media(min-width: @tablet-width) {
       flex-basis: 42%;
       justify-content: right;
 
       width: 163px
-
-
     }
   }
 
   &__copyright-title {
-    @media(min-width: @tablet-width){
+    @media(min-width: @tablet-width) {
       margin-right: 22px;
 
     }
 
-  align-self: center;
+    align-self: center;
 
   }
 
@@ -47,17 +43,20 @@
 
   }
 }
+
 .contacts {
   background-color: white;
   display: flex;
 
   justify-content: space-between;
-  @media(min-width: @tablet-width){
+
+  @media(min-width: @tablet-width) {
     padding: 0px 71px;
     height: 201px;
 
   }
-  @media(min-width: @desctop-width){
+
+  @media(min-width: @desktop-width) {
     position: absolute;
     width: 570px;
     justify-content: space-around;
@@ -70,20 +69,54 @@
 
   &__title {
     align-self: center;
+    font-family: 'Oswald', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 18px;
+    /* or 112% */
 
+    text-transform: uppercase;
+
+    @media (max-width: @mobile-width) {
+      font-size: 11.5px;
+    }
+
+    @media(min-width: @tablet-width) {
+      font-size: 20px;
+      line-height: 21px;
+    }
 
   }
 
   &__text {
     align-self: center;
+    font-family: 'Arial', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: @special_dark-grey;
+
+    @media(max-width: @tablet-width) {
+      font-size: 16px;
+      line-height: 20px;
+
+      .dividor {
+        margin-top: 28px;
+        display: block;
+      }
+    }
   }
 }
+
 .social {
-  @media(min-width: @tablet-width){
+  @media(min-width: @tablet-width) {
     display: flex;
     flex-basis: 58%;
     justify-content: space-between;
-    &__wrapper{
+
+    &__wrapper {
       display: flex;
       height: 150px;
       justify-content: space-between;
@@ -93,13 +126,14 @@
 
   }
 
-  &__logo{
+  &__logo {
     text-align: center;
 
     align-self: center;
     height: 93px;
     border-bottom: 1px solid #D9D9D9;
-    @media(min-width: @tablet-width){
+
+    @media(min-width: @tablet-width) {
       border: 0;
 
     }
@@ -116,7 +150,8 @@
     list-style-type: none;
     margin: 0;
     border-bottom: 1px solid #D9D9D9;
-    @media(min-width: @tablet-width){
+
+    @media(min-width: @tablet-width) {
       border: 0;
 
     }
@@ -128,15 +163,11 @@
 
   }
 
-  &__link {
-  }
+  &__link {}
 
-  &__link--vk {
-  }
+  &__link--vk {}
 
-  &__link--inst {
-  }
+  &__link--inst {}
 
-  &__link--fb {
-  }
+  &__link--fb {}
 }
