--- a/src/less/blocks/page-header.less
+++ b/src/less/blocks/page-header.less
@@ -1,32 +1,85 @@
-.page-header{
+.page-header {
+  &__wrapper {
+    padding: 0;
+  }
+
+  picture {
+    display: block;
+  }
+
 
   background-color: @white;
   color: #111111;
   display: flex;
   flex-direction: column;
   padding-top: 11px;
+
   @media(min-width: @tablet-width) {
     padding-top: 26px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    &__toggle{
+
+    &__toggle {
       display: none;
     }
+
   }
-  @media(min-width: @desctop-width) {
+
+  @media(min-width: @desktop-width) {
     padding-top: 53px;
+    background-color: transparent;
   }
-  &__toggle{
+
+  &__toggle {
     margin-top: 12px;
     margin-right: 23px;
+    border: none;
+    background: none;
     width: 18px;
     height: 18px;
     cursor: pointer;
+    position: relative;
+
+    &::before {
+      content: "";
+      left: -18px;
+      position: absolute;
+      width: 25px;
+      height: 1px;
+      transform: rotate(45deg);
+      background-color: black;
+    }
+
+    &::after {
+      content: "";
+      left: -18px;
+      position: absolute;
+      width: 25px;
+      height: 1px;
+      transform: rotate(-45deg);
+      background-color: black;
+    }
+
+    &__third-line {
+      position: relative;
+    }
+
+    &__third-line::before {
+      content: "";
+      left: -24px;
+      position: absolute;
+      width: 25px;
+      height: 1px;
+      background-color: black;
+    }
   }
-  &__site-name{
+
+  &__site-name {
     margin: 0;
-    margin-top: 13px;
+
+    @media(min-width: @desktop-width) {}
+
   }
 
 
@@ -35,15 +88,17 @@
 
 }
 
-.page-header__inner-wrapper{
+.page-header__inner-wrapper {
   display: flex;
   justify-content: space-between;
-  @media(min-width: @tablet-width){
+
+  @media(min-width: @tablet-width) {
     display: block;
   }
 
 }
-.page-header__slogan-wrapper{
+
+.page-header__slogan-wrapper {
   display: flex;
   flex-basis: 66%;
   justify-content: space-around;
@@ -51,26 +106,34 @@
 
 
   margin-left: 20px;
+
   @media(min-width: @tablet-width) {
     margin-left: 30px;
-    .page-header__logo{
+
+    .page-header__logo {
       margin-right: 12px;
+
+
+
     }
 
 
   }
 
-  @media(min-width: @desctop-width) {
+  @media(min-width: @desktop-width) {
     margin: 0 85px;
-    .page-header__logo{
+
+    .page-header__logo {
       margin-right: 14px;
+
     }
+
   }
 }
 
 
-.page-header__wrapper{
-  @media(min-width: @desctop-width){
+.page-header__wrapper {
+  @media(min-width: @desktop-width) {
     // background-image:;
   }
 }
