--- a/src/less/blocks/page.less
+++ b/src/less/blocks/page.less
@@ -1,7 +1,7 @@
-.page{
+.page {
   height: 100%;
   line-height: 18px;
-  font-family: "Arial", "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
