--- a/src/less/blocks/promo.less
+++ b/src/less/blocks/promo.less
@@ -1,37 +1,244 @@
 .promo {
+  margin-top: -27px;
+  justify-content: center;
+
+  &__product-images {
+    @media(min-width: @desktop-width) {
+      width: 60%;
+
+    }
+  }
+
+  &__button {
+    @media(min-width:@tablet-width) {
+      width: 294px;
+    }
+  }
+
+  &__mobile__green-cat-image {
+    @media(min-width:@tablet-width) {
+      display: none;
+    }
+  }
+
+  &__desktop__green-cat-image {
+    display: none;
+
+    @media(min-width:@desktop-width) {
+      display: block;
+    }
+  }
+
+  &__mobile__product-image {
+    @media(min-width:@tablet-width) {
+      display: none;
+    }
+  }
+
+  &__tablet__product-image {
+    display: none;
+
+    @media(min-width: @tablet-width) {
+      display: block;
+    }
+
+    @media(min-width: @desktop-width) {
+      display: none;
+    }
+  }
+
+  &__desktop__product-image {
+    display: none;
+
+
+
+
+    @media(min-width: @desktop-width) {
+      display: flex;
+      height: 606px;
+      margin-top: -25px;
+      justify-self: center;
+
+
+    }
+  }
+
+
+  &__background-cat {
+    position: absolute;
+    z-index: -1;
+    width: 110%;
+    left: -20px;
+
+    @media(min-width: @tablet-width) and (max-width: calc(@desktop-width+1)) {
+      display: none;
+    }
+
+    @media(min-width: @desktop-width) {
+      top: -155px;
+      margin-left: 50%;
+
+    }
+
+    img {
+
+
+      width: 100%;
+      object-fit: cover;
+
+      @media(min-width: @desktop-width) {
+        width: 50%;
+      }
+
+    }
+  }
+
+  &__green-overlay {
+    position: absolute;
+
+
+    width: 100%;
+    height: 302px;
+
+
+
+
+    background: rgba(104, 183, 56, 0.85);
+
+
+
+
+
+    @media(min-width:@tablet-width) {
+      display: none;
+    }
+
+    @media(min-width: @desktop-width) {
+      height: 694px;
+      width: 50%;
+      display: block;
+    }
+  }
+
+  &__product-image {
+    display: block;
+    margin: 0 auto;
+
+    @media(min-width: @desktop-width) {
+      height: 500px;
+    }
+  }
+
   &__wrapper {
+    position: relative;
 
     padding: 0 20px;
     min-height: 480px;
-    @media(min-width: @tablet-width){
+    padding-top: 27px;
+    margin-top: 33px;
+
+    @media(min-width: @tablet-width) {
       background-image: none;
       padding: 0 30px;
+      margin-top: 64px;
+      height: 650px;
     }
-    @media(min-width: @desctop-width){
+
+
+    @media(min-width: @desktop-width) {
       padding: 0 110px;
+      display: flex;
     }
   }
 
   &__header {
     text-align: center;
+
   }
 
   &__slogan {
     margin-top: 27px;
     margin-bottom: 25px;
+    font-family: 'Oswald', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 36px;
+    color: @white;
+
+    @media(max-width: calc(@mobile-width + 30px)) {
+      font-size: 32px;
+    }
+
+    @media(min-width: @tablet-width) {
+      color: black;
+      font-weight: 400;
+      font-size: 60px;
+      line-height: 60px;
+      display: flex;
+      justify-self: flex-start;
+      padding-left: 58px;
+      margin-bottom: 100px;
+      text-align: left;
+
+    }
+
+    @media(min-width: @desktop-width) {
+      padding-left: 58px;
+
+    }
+
   }
 
   &__intro {
+    font-family: 'Oswald', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 14px;
+    color: @white;
+    text-transform: uppercase;
+
+    @media(min-width: @tablet-width) {
+      color: black;
+      font-size: 20px;
+      line-height: 20px;
+      display: flex;
+      justify-self: flex-start;
+      padding-left: 58px;
+      position: absolute;
+      top: 150px;
+
+    }
+
+    @media(min-width: @desktop-width) {
+      padding-left: 58px;
+      margin-top: 87px
+    }
+
   }
 
   &__image {
-    @media(min-width: @tablet-width){
+    @media(min-width: @tablet-width) {
       height: 0px;
       width: 0px;
     }
   }
 
   &__button {
-    height: 40px;
+    height: 50px;
+
+    @media(min-width: @tablet-width) {
+      position: absolute;
+      top: 240px;
+      left: 84px;
+      height: 60px;
+      font-size: 21px;
+    }
+
+    @media(min-width: @desktop-width) {
+      left: 171px;
+      top: 320px;
+    }
   }
 }
