--- a/src/less/blocks/utils/wrappers.less
+++ b/src/less/blocks/utils/wrappers.less
@@ -1,11 +1,13 @@
-.wrapper{
-
+.wrapper {
+  box-sizing: border-box;
+  min-width: 320px;
   padding: 0 20px;
-  @media(min-width: @tablet-width){
+
+  @media(min-width: @tablet-width) {
     padding: 0 30px;
   }
 
-  @media(min-width: @desctop-width){
+  @media(min-width: @desktop-width) {
     padding: 0 85px;
 
   }
