--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -1,6 +1,7 @@
-.bold{
+.bold {
   font-weight: bold;
 }
+
 .visually-hidden {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
@@ -9,4 +10,27 @@
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+.button {
+  font-family: 'Oswald', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: @white;
+  text-transform: uppercase;
+  width: 100%;
+  background-color: @basic_green;
+  height: 40px;
+
+  @media(min-width: @tablet-width) {
+    height: 54px;
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
